# mfri

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/: mfriConfig.cmake.in
include/mfri/: param_client.hpp  param_server.hpp  param_value.hpp  publisher.hpp  srv_client.hpp  srv_server.hpp  subscriber.hpp
include/mfri/idl/: GetParameters.hpp  GetParameters.idl  GetParametersCdrAux.hpp  GetParametersCdrAux.ipp  GetParametersPubSubTypes.hpp  GetParametersTypeObjectSupport.hpp  Parameter.hpp  Parameter.idl  ParameterCdrAux.hpp  ParameterCdrAux.ipp  ParameterPubSubTypes.hpp  ParameterType.hpp  ParameterTypeObjectSupport.hpp  ParameterValue.hpp  ParameterValue.idl  ParameterValueCdrAux.hpp  ParameterValueCdrAux.ipp  ParameterValuePubSubTypes.hpp  ParameterValueTypeObjectSupport.hpp  SetParameters.hpp  SetParameters.idl  SetParametersCdrAux.hpp  SetParametersCdrAux.ipp  SetParametersPubSubTypes.hpp  SetParametersResult.hpp  SetParametersResult.idl  SetParametersResultCdrAux.hpp  SetParametersResultCdrAux.ipp  SetParametersResultPubSubTypes.hpp  SetParametersResultTypeObjectSupport.hpp  SetParametersTypeObjectSupport.hpp
src/idl/: GetParametersPubSubTypes.cxx  GetParametersTypeObjectSupport.cxx  ParameterPubSubTypes.cxx  ParameterTypeObjectSupport.cxx  ParameterValuePubSubTypes.cxx  ParameterValueTypeObjectSupport.cxx  SetParametersPubSubTypes.cxx  SetParametersResultPubSubTypes.cxx  SetParametersResultTypeObjectSupport.cxx  SetParametersTypeObjectSupport.cxx
test/: CMakeLists.txt  test_mfri.cpp
test/idl/: AddTwoInts_Request.hpp  AddTwoInts_Request.idl  AddTwoInts_RequestCdrAux.hpp  AddTwoInts_RequestCdrAux.ipp  AddTwoInts_RequestPubSubTypes.cxx  AddTwoInts_RequestPubSubTypes.hpp  AddTwoInts_RequestTypeObjectSupport.cxx  AddTwoInts_RequestTypeObjectSupport.hpp  AddTwoInts_Response.hpp  AddTwoInts_Response.idl  AddTwoInts_ResponseCdrAux.hpp  AddTwoInts_ResponseCdrAux.ipp  AddTwoInts_ResponsePubSubTypes.cxx  AddTwoInts_ResponsePubSubTypes.hpp  AddTwoInts_ResponseTypeObjectSupport.cxx  AddTwoInts_ResponseTypeObjectSupport.hpp
